clear code from unused comments